2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs, PanelTest.cs: Added AlignmentMetadata test.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Alignment test.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Measure test.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonTest.cs: Added DockPanel test.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Expanded MeasureOverride test, added ButtonMeasureOverride test.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Expanded MeasureOverride test.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Added.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added IAddChild test.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added Focusable test.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added ZIndex test.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added ShouldSerializeChildren test.