@@ -1,3 +1,7 @@
+2007-06-07  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ScrollViewerTest.cs: Added.
+
 2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* StackPanelTest.cs, PanelTest.cs: Added AlignmentMetadata test.
